meta tag details added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="author" content="Anthony Chaple Lopez" />
-		<meta name="keywords" content="Software Developer, Web Developer, Python, Django, Flask, HTML, CSS,
+		<meta name="keywords" content="Anthony Chaple Lopez, Software Developer, Web Developer, Python, Django, Flask, HTML, CSS,
 										JavaScript, Bootstrap" />
 		<meta name="description" content="Hi I'm Anthony, I am a Software Developer. Here are some of my projects and contact information" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -44,7 +44,7 @@
 							<div class="inner">
 								<h2>< Hello :) ></h2>
 								<h3>I'm Anthony Chaple Lopez</h3>
-								<p>A software developer, passionate about all things programming.</p>
+								<p>A <b>Software Developer</b>, passionate about all things programming.</p>
 							</div>
 						</header>
 
