added anthonychl to meta

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="author" content="Anthony Chaple Lopez" />
-		<meta name="keywords" content="Anthony Chaple Lopez, Software Developer, Web Developer, Python, Django, Flask, HTML, CSS,
+		<meta name="keywords" content="Anthony Chaple Lopez, anthonychl, anthony.ch.l, Software Developer, Web Developer, Python, Django, Flask, HTML, CSS,
 										JavaScript, Bootstrap" />
 		<meta name="description" content="Hi I'm Anthony, I am a Software Developer. Here are some of my projects and contact information" />
 		<link rel="stylesheet" href="assets/css/main.css" />
