--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="author" content="Anthony Chaple Lopez" />
-		<meta name="keywords" content="Anthony Chaple Lopez, anthonychl, anthony.ch.l, Software Developer, Web Developer, Python, Django, Flask, HTML, CSS,
-										JavaScript, Bootstrap" />
-		<meta name="description" content="Hi I'm Anthony, I am a Software Developer. Here are some of my projects and contact information" />
+		<meta name="keywords" content="Anthony Chaple Lopez, anthonychl, Linux Administrator, IT, Programmer" />
+		<meta name="description" content="Hi I'm Anthony, SysAdmin and programming enthusiast. Here are some of my projects and contact information" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -44,14 +43,21 @@
 							<div class="inner">
 								<h2>< Hello :) ></h2>
 								<h3>I'm Anthony Chaple Lopez</h3>
-								<p>A <b>Software Developer</b>, passionate about all things programming.</p>
+								<p><b>Linux</b>,<b> Systems Administration</b> and <b>programming</b> enthusiast.</p>
+								<p> 
+									Always interested in learning about new technologies and improving my sysadmin and programming skills. 
+									Currently <b><a href="https://www.credly.com/badges/ed2a3e71-112c-4f5e-a1d5-d46af72c333c/linked_in" target="_blank">CompTIA Linux+</a></b> 
+									certified and working on a couple more certifications and courses, check my 
+									<b><a href="https://www.linkedin.com/in/anthony-chaple-lopez-54160a196/" target="_blank">LinkedIn</a></b> profile if you want to stay in the loop.									
+								</p>
+								
 							</div>
 						</header>
 
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
-									<h3 class="major" id="projects">Here are some of my projects</h3>
+									<h3 class="major" id="projects">These are some personal projects</h3>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/ecomm-home.png" alt="" /></a>
@@ -82,16 +88,16 @@
 									</section>
 									<h3 class="major" id="skills">Skills</h3>
 									<p> 
-										I'm mostly focused on improving my coding skills on the backend side of web applications and so far 
-										<b>Python</b> is my programming language of choice, using the <b>Django</b>
-										and <b>Flask</b> frameworks as a great complement to it. I am familiar with <b>PHP</b> and <b>Wordpress</b>
-										to a degree as I did a few small personal projects in the past using them. I am also continuously working on my 
-										frontend skills, being knowledgeable in <b>HTML, CSS, Bootstrap</b> and <b>Javascript ES6</b> is essential
-										in order to bring web apps to completion, whether taking advantage of stock templates or building one from scratch.
-										And lastly, my educational background gave me a solid foundation
-										in programming through <b>C</b> and <b>C++</b>, in addition to using the <b>Qt</b> libraries and IDE.
+										<ul>
+											<li>GNU/Linux Commands</li>
+											<li>Linux Installation and Package Management</li>
+											<li>Linux Administrative Tasks</li>
+											<li>Networking Fundamentals</li>
+											<li>Python and C++ programming</li>
+											<li>Bilingual (English, Spanish)</li>
+										</ul>
 									</br>
-										I love coding so I'm always open to learn new technologies given the opportunity.
+										
 									</p>
 								</div>
 							</div>
@@ -105,7 +111,6 @@
 							<ul class="contact">
 								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/anthony-chaple-lopez-54160a196/" target="_blank">linkedin.com/in/anthony-chaple-lopez-54160a196/</a></li>
 								<li class="icon brands fa-github"><a href="https://github.com/anthonychl" target="_blank">github.com/anthonychl</a></li>
-								<li class="icon brands fa-instagram"><a href="https://www.instagram.com/anthony.ch.l/" target="_blank">instagram.com/anthony.ch.l/</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Anthony Chaple Lopez </li>
