--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 											<li>Linux Administrative Tasks</li>
 											<li>Networking Fundamentals</li>
 											<li>Python and C++ programming</li>
+											<li>Version Control with Git</li>
 											<li>Bilingual (English, Spanish)</li>
 										</ul>
 									</br>
