--- a/index.html
+++ b/index.html
@@ -87,19 +87,30 @@
 										</article>
 									</section>
 									<h3 class="major" id="skills">Skills</h3>
-									<p> 
+									<section class="features">
+									<article>
 										<ul>
 											<li>GNU/Linux Commands</li>
 											<li>Linux Installation and Package Management</li>
 											<li>Linux Administrative Tasks</li>
 											<li>Networking Fundamentals</li>
-											<li>Python and C++ programming</li>
+											<li>Docker</li>
+										</ul>
+									</br>
+								    </article> 
+									<article>
+										<ul>
+											<li>Active Directory & OpenDLAP</li>
 											<li>Version Control with Git</li>
+											<li>Python and C++ programming</li>
+											<li>Troubleshooting & Customer Support</li>
 											<li>Bilingual (English, Spanish)</li>
 										</ul>
 									</br>
+								    </article> 
+								    </section>
 										
-									</p>
+									
 								</div>
 							</div>
 
