--- a/index.html
+++ b/index.html
@@ -94,16 +94,14 @@
 											<li>Linux Installation and Package Management</li>
 											<li>Linux Administrative Tasks</li>
 											<li>Networking Fundamentals</li>
-											<li>Docker</li>
 										</ul>
 									</br>
 								    </article> 
 									<article>
 										<ul>
-											<li>Active Directory & OpenDLAP</li>
+											<li>Active Directory</li>
 											<li>Version Control with Git</li>
 											<li>Python and C++ programming</li>
-											<li>Troubleshooting & Customer Support</li>
 											<li>Bilingual (English, Spanish)</li>
 										</ul>
 									</br>
