proxmox image and article added

--- a/index.html
+++ b/index.html
@@ -60,30 +60,36 @@
 									<h3 class="major" id="projects">These are some personal projects</h3>
 									<section class="features">
 										<article>
+											<a href="#" class="image"><img src="images/proxmox-img.png" alt="" /></a>
+											<h3 class="major">PROXMOX server</h3>
+											<p>My notes and step by step guides based on a <a href="https://www.youtube.com/c/LearnLinuxtv" class="special" target="_blank"></a>learn linux tv</a> proxmox tutorial series </p>
+											<a href="https://github.com/anthonychl/proxmox" class="special" target="_blank">Check on Github</a>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/ecomm-home.png" alt="" /></a>
 											<h3 class="major">Anthony's</h3>
 											<p>An eCommerce webapp. <br> <b>Python, Django,</b> the<b> Stripe API, Bootstrap</b> and <b>JS</b>
 											are among the technologies being used.</p>
-											<a href="https://github.com/anthonychl/django2-ecommerce" class="special" target="_blank">See the code</a>
+											<a href="https://github.com/anthonychl/django2-ecommerce" class="special" target="_blank">Check on Github</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pup-home.png" alt="" /></a>
 											<h3 class="major">Puppy Blog</h3>
 											<p>A blog web application.<br> Here <b>Python</b> and the <b>Flask</b> framework take care of the backend.</p>
-											<a href="https://github.com/anthonychl/Puppy-Blog" class="special" target="_blank">See the code</a>
+											<a href="https://github.com/anthonychl/Puppy-Blog" class="special" target="_blank">Check on Github</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/simple-home.png" alt="" /></a>
 											<h3 class="major">SimpleSocial</h3>
 											<p>A 'Social Network'. <br> <b>Python, Django, MDBootstrap</b> and more is used to bring this app to life.</p>
-											<a href="https://github.com/anthonychl/SimpleSocial" class="special" target="_blank">See the code</a>
+											<a href="https://github.com/anthonychl/SimpleSocial" class="special" target="_blank">Check on Github</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/btre-home.png" alt="" /></a>
 											<h3 class="major">BT Real Estate</h3>
 											<p>A real estate website. <br> Taking advantage of an existing template, and implementing <b>Python</b> and <b>Django</b>
 											for our backend.</p>
-											<a href="https://github.com/anthonychl/Python-Django-dev-to-deployment" class="special" target="_blank">See the code</a>
+											<a href="https://github.com/anthonychl/Python-Django-dev-to-deployment" class="special" target="_blank">Check on Github</a>
 										</article>
 									</section>
 									<h3 class="major" id="skills">Skills</h3>
