--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/proxmox-img.png" alt="" /></a>
 											<h3 class="major">PROXMOX server</h3>
-											<p>My notes and step by step guides based on a <a href="https://www.youtube.com/c/LearnLinuxtv" target="_blank">learn linux tv</a> proxmox tutorial series </p>
+											<p>My notes and step by step guides. <br> Based on a <a href="https://www.youtube.com/c/LearnLinuxtv" target="_blank">learn linux tv</a> proxmox tutorial series </p>
 											<a href="https://github.com/anthonychl/proxmox" class="special" target="_blank">Check on Github</a>
 										</article>
 										<article>
