ansible article added

--- a/index.html
+++ b/index.html
@@ -60,32 +60,38 @@
 									<h3 class="major" id="projects">These are some personal projects</h3>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/proxmox-img.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/proxmox-img.png" alt="proxmox" /></a>
 											<h3 class="major">PROXMOX server</h3>
 											<p>My notes and step by step guides. <br> Based on a <a href="https://www.youtube.com/c/LearnLinuxtv" target="_blank">learn linux tv</a> proxmox tutorial series </p>
 											<a href="https://github.com/anthonychl/proxmox" class="special" target="_blank">Check on Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/ecomm-home.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/ansible.png" alt="ansible" /></a>
+											<h3 class="major">Ansible</h3>
+											<p>My notes and step by step guides. <br> Based on a <a href="https://www.youtube.com/c/LearnLinuxtv" target="_blank">learn linux tv</a> ansible tutorial series </p>
+											<a href="https://github.com/anthonychl/ansible" class="special" target="_blank">Check on Github</a>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/ecomm-home.png" alt="eCommerce" /></a>
 											<h3 class="major">Anthony's</h3>
 											<p>An eCommerce webapp. <br> <b>Python, Django,</b> the<b> Stripe API, Bootstrap</b> and <b>JS</b>
 											are among the technologies being used.</p>
 											<a href="https://github.com/anthonychl/django2-ecommerce" class="special" target="_blank">Check on Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pup-home.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/pup-home.png" alt="Blog" /></a>
 											<h3 class="major">Puppy Blog</h3>
 											<p>A blog web application.<br> Here <b>Python</b> and the <b>Flask</b> framework take care of the backend.</p>
 											<a href="https://github.com/anthonychl/Puppy-Blog" class="special" target="_blank">Check on Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/simple-home.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/simple-home.png" alt="Social Network" /></a>
 											<h3 class="major">SimpleSocial</h3>
 											<p>A 'Social Network'. <br> <b>Python, Django, MDBootstrap</b> and more is used to bring this app to life.</p>
 											<a href="https://github.com/anthonychl/SimpleSocial" class="special" target="_blank">Check on Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/btre-home.png" alt="" /></a>
+											<a href="#" class="image"><img src="images/btre-home.png" alt="Real Estate" /></a>
 											<h3 class="major">BT Real Estate</h3>
 											<p>A real estate website. <br> Taking advantage of an existing template, and implementing <b>Python</b> and <b>Django</b>
 											for our backend.</p>
@@ -99,14 +105,16 @@
 											<li>GNU/Linux Commands</li>
 											<li>Linux Installation and Package Management</li>
 											<li>Linux Administrative Tasks</li>
+											<li>Proxmox</li>
 											<li>Networking Fundamentals</li>
 										</ul>
 									</br>
 								    </article> 
 									<article>
 										<ul>
-											<li>Active Directory</li>
+											<li>Ansible</li>
 											<li>Version Control with Git</li>
+											<li>Active Directory</li>
 											<li>Python and C++ programming</li>
 											<li>Bilingual (English, Spanish)</li>
 										</ul>
