--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
 						<header>
 							<div class="inner">
 								<h2>< Hello :) ></h2>
-								<h3>I'm Anthony Chaple Lopez</h3>
-								<p><b>Linux</b>,<b> Systems Administration</b> and <b>programming</b> enthusiast.</p>
+								<h3>I'm Anthony</h3>
 								<p> 
-									Always interested in learning about new technologies and improving my sysadmin and programming skills. 
-									Currently <b><a href="https://www.credly.com/badges/ed2a3e71-112c-4f5e-a1d5-d46af72c333c/linked_in" target="_blank">CompTIA Linux+</a></b> 
+									This website shows some of the projects I have worked on while learning about linux, networking, security and programming. 
+									I am currently <b><a href="https://www.credly.com/badges/ed2a3e71-112c-4f5e-a1d5-d46af72c333c/linked_in" target="_blank">CompTIA Linux+</a></b> and 
+									<b><a href="https://www.credly.com/badges/31989a4f-1f4d-4a5a-bf84-8333f60ce269/public_url" target="_blank">CompTIA Network+</a></b>
 									certified and working on a couple more certifications and courses, check my 
-									<b><a href="https://www.linkedin.com/in/anthony-chaple-lopez-54160a196/" target="_blank">LinkedIn</a></b> profile if you want to stay in the loop.									
+									<b><a href="https://www.linkedin.com/in/anthony-chaple-lopez-54160a196/" target="_blank">LinkedIn</a></b> profile and <b></b><a href="https://github.com/anthonychl" target="_blank">Github</a></b>
+									account for more.									
 								</p>
 								
 							</div>
