--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									I am currently <b><a href="https://www.credly.com/badges/ed2a3e71-112c-4f5e-a1d5-d46af72c333c/linked_in" target="_blank">CompTIA Linux+</a></b> and 
 									<b><a href="https://www.credly.com/badges/31989a4f-1f4d-4a5a-bf84-8333f60ce269/public_url" target="_blank">CompTIA Network+</a></b>
 									certified and working on a couple more certifications and courses, check my 
-									<b><a href="https://www.linkedin.com/in/anthony-chaple-lopez-54160a196/" target="_blank">LinkedIn</a></b> profile and <b></b><a href="https://github.com/anthonychl" target="_blank">Github</a></b>
+									<b><a href="https://www.linkedin.com/in/anthony-chaple-lopez-54160a196/" target="_blank">LinkedIn</a></b> profile and <b><a href="https://github.com/anthonychl" target="_blank">Github</a></b>
 									account for more.									
 								</p>
 								
@@ -58,7 +58,7 @@
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
-									<h3 class="major" id="projects">These are some personal projects</h3>
+									<h3 class="major" id="projects">Projects</h3>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/proxmox-img.png" alt="proxmox" /></a>
