--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 								<h2>< Hello :) ></h2>
 								<h3>I'm Anthony</h3>
 								<p> 
-									This website shows some of the projects I have worked on while learning about linux, networking, security and programming. 
+									This website shows some of the projects I have worked on while learning about linux, networking, cloud technologies, security and programming. 
 									I am currently <b><a href="https://www.credly.com/badges/ed2a3e71-112c-4f5e-a1d5-d46af72c333c/linked_in" target="_blank">CompTIA Linux+</a></b> and 
 									<b><a href="https://www.credly.com/badges/31989a4f-1f4d-4a5a-bf84-8333f60ce269/public_url" target="_blank">CompTIA Network+</a></b>
 									certified and working on a couple more certifications and courses, check my 
