My name updated

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Anthony Chaple Lopez</title>
+		<title>Anthony Chaple</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="author" content="Anthony Chaple Lopez" />
-		<meta name="keywords" content="Anthony Chaple Lopez, anthonychl, Linux Administrator, IT, Programmer" />
+		<meta name="author" content="Anthony Chaple" />
+		<meta name="keywords" content="Anthony Chaple, anthonychl, Linux Administrator, IT, Programmer" />
 		<meta name="description" content="Hi I'm Anthony, SysAdmin and programming enthusiast. Here are some of my projects and contact information" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Anthony Chaple Lopez</a></h1>
+						<h1><a href="index.html">Anthony Chaple</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -138,7 +138,7 @@
 								<li class="icon brands fa-github"><a href="https://github.com/anthonychl" target="_blank">github.com/anthonychl</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Anthony Chaple Lopez </li>
+								<li>&copy; Anthony Chaple</li>
 							</ul>
 						</div>
 					</section>
