--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="author" content="Anthony Chaple" />
 		<meta name="keywords" content="Anthony Chaple, anthonychl, Linux Administrator, IT, Programmer" />
-		<meta name="description" content="Hi I'm Anthony, SysAdmin and programming enthusiast. Here are some of my projects and contact information" />
+		<meta name="description" content="Hi I'm Anthony, cybersecurity and programming enthusiast. Here are some of my projects and contact information" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
