--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								<h3>I'm Anthony</h3>
 								<p> 
 									This website shows some of the projects I have worked on while learning about linux, networking, cloud technologies, security and programming. 
-									I am currently <b><a href="https://www.credly.com/badges/ed2a3e71-112c-4f5e-a1d5-d46af72c333c/linked_in" target="_blank">CompTIA Linux+</a></b> and 
+									I am currently <b><a href="https://www.credly.com/badges/8ea8d8db-ff7d-454b-a1a7-a6b89038cbe7/linked_in" target="_blank">CompTIA Security+</a></b> and 
 									<b><a href="https://www.credly.com/badges/31989a4f-1f4d-4a5a-bf84-8333f60ce269/public_url" target="_blank">CompTIA Network+</a></b>
 									certified and working on a couple more certifications and courses, check my 
 									<b><a href="https://www.linkedin.com/in/anthony-chaple-lopez-54160a196/" target="_blank">LinkedIn</a></b> profile and <b><a href="https://github.com/anthonychl" target="_blank">Github</a></b>
