--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="#">Home</a></li>
+								<li><a href="#certifications">Certifications</a></li>
 								<li><a href="#projects">Projects</a></li>
 								<li><a href="#skills">Skills</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -45,8 +46,8 @@
 								<h3>I'm Anthony</h3>
 								<p> 
 									This website shows some of the projects I have worked on while learning about linux, networking, cloud technologies, security and programming. 
-									I am currently <b><a href="https://www.credly.com/badges/8ea8d8db-ff7d-454b-a1a7-a6b89038cbe7/linked_in" target="_blank">CompTIA Security+</a></b> and 
-									<b><a href="https://www.credly.com/badges/31989a4f-1f4d-4a5a-bf84-8333f60ce269/public_url" target="_blank">CompTIA Network+</a></b>
+									I am currently <b><a href="https://www.credly.com/badges/8ea8d8db-ff7d-454b-a1a7-a6b89038cbe7" target="_blank">CompTIA Security+</a></b> and 
+									<b><a href="https://www.credly.com/badges/31989a4f-1f4d-4a5a-bf84-8333f60ce269" target="_blank">CompTIA Network+</a></b>
 									certified and working on a couple more certifications and courses, check my 
 									<b><a href="https://www.linkedin.com/in/anthony-chaple-lopez-54160a196/" target="_blank">LinkedIn</a></b> profile and <b><a href="https://github.com/anthonychl" target="_blank">Github</a></b>
 									account for more.									
@@ -58,41 +59,69 @@
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
+									<h3 class="major" id="certifications">Certifications</h3>
+									<section class="features2">
+										<article>
+											<a href="#certifications" class="image"><img src="images/security.png" alt="Security+" /></a>
+											<h3 class="major">CompTIA Security+</h3>
+											<a href="https://www.credly.com/badges/8ea8d8db-ff7d-454b-a1a7-a6b89038cbe7" class="special" target="_blank">Check on Credly</a>
+										</article>
+										<article>
+											<a href="#certifications" class="image"><img src="images/network.png" alt="Network+" /></a>
+											<h3 class="major">Comptia Network+</h3>
+											<a href="https://www.credly.com/badges/31989a4f-1f4d-4a5a-bf84-8333f60ce269" class="special" target="_blank">Check on Credly</a>
+										</article>
+										<article>
+											<a href="#certifications" class="image"><img src="images/az900.png" alt="AZ900" /></a>
+											<h3 class="major">Microsoft Azure Fundamentals AZ900</h3>
+											<a href="https://www.credly.com/badges/425cd1fd-d395-471b-8439-4d6ab0178884" class="special" target="_blank">Check on Credly</a>
+										</article>
+										<article>
+											<a href="#certifications" class="image"><img src="images/googlecyber.png" alt="GoogleCyber" /></a>
+											<h3 class="major">Google Cybersecurity</h3>
+											<a href="https://www.credly.com/badges/441442c1-1336-4b50-972e-670d29ebf52a" class="special" target="_blank">Check on Credly</a>
+										</article>
+										<article>
+											<a href="#certifications" class="image"><img src="images/googleit.png" alt="GoogleIT" /></a>
+											<h3 class="major">Google IT Support</h3>
+											<a href="https://www.credly.com/badges/e0c96bee-9a4f-4325-bec2-29e0b94bbfd5" class="special" target="_blank">Check on Credly</a>
+										</article>
+									</section>
 									<h3 class="major" id="projects">Projects</h3>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/proxmox-img.png" alt="proxmox" /></a>
+											<a href="#projects" class="image"><img src="images/proxmox-img.png" alt="proxmox" /></a>
 											<h3 class="major">PROXMOX server</h3>
 											<p>My notes and step by step guides. <br> Based on a <a href="https://www.youtube.com/c/LearnLinuxtv" target="_blank">learn linux tv</a> proxmox tutorial series </p>
 											<a href="https://github.com/anthonychl/proxmox" class="special" target="_blank">Check on Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/ansible.png" alt="ansible" /></a>
+											<a href="#projects" class="image"><img src="images/ansible.png" alt="ansible" /></a>
 											<h3 class="major">Ansible</h3>
 											<p>My notes and step by step guides. <br> Based on a <a href="https://www.youtube.com/c/LearnLinuxtv" target="_blank">learn linux tv</a> ansible tutorial series </p>
 											<a href="https://github.com/anthonychl/ansible" class="special" target="_blank">Check on Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/ecomm-home.png" alt="eCommerce" /></a>
+											<a href="#projects" class="image"><img src="images/ecomm-home.png" alt="eCommerce" /></a>
 											<h3 class="major">Anthony's</h3>
 											<p>An eCommerce webapp. <br> <b>Python, Django,</b> the<b> Stripe API, Bootstrap</b> and <b>JS</b>
 											are among the technologies being used.</p>
 											<a href="https://github.com/anthonychl/django2-ecommerce" class="special" target="_blank">Check on Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pup-home.png" alt="Blog" /></a>
+											<a href="#projects" class="image"><img src="images/pup-home.png" alt="Blog" /></a>
 											<h3 class="major">Puppy Blog</h3>
 											<p>A blog web application.<br> Here <b>Python</b> and the <b>Flask</b> framework take care of the backend.</p>
 											<a href="https://github.com/anthonychl/Puppy-Blog" class="special" target="_blank">Check on Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/simple-home.png" alt="Social Network" /></a>
+											<a href="#projects" class="image"><img src="images/simple-home.png" alt="Social Network" /></a>
 											<h3 class="major">SimpleSocial</h3>
 											<p>A 'Social Network'. <br> <b>Python, Django, MDBootstrap</b> and more is used to bring this app to life.</p>
 											<a href="https://github.com/anthonychl/SimpleSocial" class="special" target="_blank">Check on Github</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/btre-home.png" alt="Real Estate" /></a>
+											<a href="#projects" class="image"><img src="images/btre-home.png" alt="Real Estate" /></a>
 											<h3 class="major">BT Real Estate</h3>
 											<p>A real estate website. <br> Taking advantage of an existing template, and implementing <b>Python</b> and <b>Django</b>
 											for our backend.</p>
@@ -103,17 +132,15 @@
 									<section class="features">
 									<article>
 										<ul>
-											<li>GNU/Linux Commands</li>
 											<li>Linux Installation and Package Management</li>
-											<li>Linux Administrative Tasks</li>
-											<li>Proxmox</li>
-											<li>Networking Fundamentals</li>
+											<li>Linux Administrative Tasks and Commands</li>
+											<li>BurpSuite</li>
+											<li>Metasploit</li>
 										</ul>
 									</br>
 								    </article> 
 									<article>
 										<ul>
-											<li>Ansible</li>
 											<li>Version Control with Git</li>
 											<li>Active Directory</li>
 											<li>Python and C++ programming</li>
