--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
 						<header>
 							<div class="inner">
 								<h2>< Hello :) ></h2>
-								<h3>I'm Anthony</h3>
+								<h3>I'm Anthony.</h3>
 								<p> 
-									This website shows some of the projects I have worked on while learning about linux, networking, cloud technologies, security and programming. 
-									I am currently <b><a href="https://www.credly.com/badges/8ea8d8db-ff7d-454b-a1a7-a6b89038cbe7" target="_blank">CompTIA Security+</a></b> and 
+									Welcome to my portfolio! Here, you'll find projects that showcase my journey through learning Linux, networking, cloud technologies,
+									security, and programming. I am certified <b><a href="https://www.credly.com/badges/8ea8d8db-ff7d-454b-a1a7-a6b89038cbe7" target="_blank">CompTIA Security+</a></b> and 
 									<b><a href="https://www.credly.com/badges/31989a4f-1f4d-4a5a-bf84-8333f60ce269" target="_blank">CompTIA Network+</a></b>
-									certified and working on a couple more certifications and courses, check my 
+									and I'm actively working towards additional certifications and courses.
+									I'm particularly interested in cybersecurity, with a focus on roles such as Security Operations Center (SOC) Analyst.
+									For more information, feel free to visit my 
 									<b><a href="https://www.linkedin.com/in/anthony-chaple-lopez-54160a196/" target="_blank">LinkedIn</a></b> profile and <b><a href="https://github.com/anthonychl" target="_blank">Github</a></b>
 									account for more.									
 								</p>
