--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									and I'm actively working towards additional certifications and courses.
 									I'm particularly interested in cybersecurity, with a focus on roles such as Security Operations Center (SOC) Analyst.
 									For more information, feel free to visit my 
-									<b><a href="https://www.linkedin.com/in/anthony-chaple-lopez-54160a196/" target="_blank">LinkedIn</a></b> profile and <b><a href="https://github.com/anthonychl" target="_blank">Github</a></b>
+									<b><a href="https://www.linkedin.com/in/anthony-chaple-lopez-54160a196/" target="_blank">LinkedIn</a></b> profile,<b><a href="https://tryhackme.com/r/p/Anthonych" target="_blank">Tryhackme</a></b> and <b><a href="https://github.com/anthonychl" target="_blank">Github</a></b>
 									account for more.									
 								</p>
 								
