--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
 						<div class="inner">
 							<h2 class="major" id="contact">Get in touch</h2>
 							<ul class="contact">
-								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/anthony-chaple-lopez-54160a196/" target="_blank">linkedin.com/in/anthony-chaple-lopez-54160a196/</a></li>
-								<li class="icon brands fa-github"><a href="https://github.com/anthonychl" target="_blank">github.com/anthonychl</a></li>
+								<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/anthony-chaple-lopez-54160a196/" target="_blank">linkedin</a></li>
+								<li class="icon brands fa-github"><a href="https://github.com/anthonychl" target="_blank">github</a></li>
 							</ul>
 							<iframe src="https://tryhackme.com/api/v2/badges/public-profile?userPublicId=3133018" style='border:none;'></iframe>
 						</div>
